package behavioral.mediator.BTK2;

public interface OrderMediator {
    void sendMessage(String message, Participant sender);
}
